--- a/simple_image_viewer.html
+++ b/simple_image_viewer.html
@@ -42,6 +42,10 @@
         image.src = file_path + zero_paddinged_page + file_extension;
       }
 
+      function set_image_margin_bottom() {
+        image.style.marginBottom = window.innerHeight + "px";
+      }
+
       function set_onmousemove() {
         window.document.onmousemove = function(e) {
           if (e.clientX < window.innerWidth / 2) {
@@ -56,7 +60,7 @@
       }
 
       function set_onmousedown() {
-        window.document.onmousedown = function (e){
+        window.document.onmousedown = function(e) {
           var page = get_page_from_hash();
 
           if (e.clientX < window.innerWidth / 2) {
@@ -68,7 +72,14 @@
             set_page_to_hash(page - 1);
 
             // 画面は一番下にスクロールした状態にする
-            window.scrollTo(0, document.body.clientHeight);
+            // 左クリック時には一旦、画像下のマージンを0にしておく
+            image.style.marginBottom = "0px";
+
+            // 一番下にスクロール
+            window.scrollTo(0, window.document.body.clientHeight);
+
+            // スクロールが終わってから画像下のマージンをリセットする
+            set_image_margin_bottom();
           }
           else {
             // 右半分クリック / 次のページ
@@ -80,9 +91,19 @@
         };
       }
 
+      function set_onresize() {
+        window.onresize = function(e) {
+          set_image_margin_bottom();
+        };
+      }
+
       function initialize() {
         image = window.document.getElementById("image");
         image.style.width = "100%";
+        set_image_margin_bottom();
+
+        // 画像と背景の境目が分かりやすいように背景色を設定する。とりあえず灰色
+        window.document.body.style.backgroundColor = "#dddddd";
 
         zero_padding_string = new Array(zero_suppress_num).fill("0").join("");
 
@@ -98,6 +119,7 @@
 
       set_onmousemove();
       set_onmousedown();
+      set_onresize();
     })();
   </script>
 </body>
