fix cursor image -> body

--- a/simple_image_viewer.html
+++ b/simple_image_viewer.html
@@ -57,7 +57,7 @@
 
       function set_onmousemove() {
         function set_cursor(cursor_style) {
-          image.style.cursor = cursor_style;
+          window.document.body.style.cursor = cursor_style;
         }
 
         window.document.onmousemove = function(e) {
