fix start initialize use window.DOMContentLoaded

--- a/simple_image_viewer.html
+++ b/simple_image_viewer.html
@@ -161,7 +161,7 @@
       var image;
       var zero_padding_string;
 
-      initialize();
+      window.addEventListener("DOMContentLoaded", initialize, false);
     })();
   </script>
 </body>
