--- a/simple_image_viewer.html
+++ b/simple_image_viewer.html
@@ -4,7 +4,7 @@
 </head>
 <body>
   <script>
-    (function(){
+    (function() {
       "use strict";
 
       // e.g.
@@ -14,7 +14,7 @@
       var file_extension    = ".jpg";
 
       function get_page_from_hash() {
-        var page_string = window.location.hash.substring(1);
+        var page_string = location.hash.substring(1);
         var page        = parseInt(page_string, 10);
 
         if (isFinite(page) === false || page < 1) {
@@ -30,7 +30,7 @@
 
         update_image(zero_paddinged_page);
 
-        window.history.pushState(null, null, path_hash);
+        history.pushState(null, null, path_hash);
       }
 
       function get_zero_padding_page(page) {
@@ -46,7 +46,7 @@
       }
 
       function reset_image_margin_bottom() {
-        set_image_margin_bottom(window.innerHeight);
+        set_image_margin_bottom(innerHeight);
       }
 
       function delete_image_margin_bottom() {
@@ -55,11 +55,11 @@
 
       function set_onmousemove() {
         function set_cursor(cursor_style) {
-          window.document.body.style.cursor = cursor_style;
+          document.body.style.cursor = cursor_style;
         }
 
-        window.addEventListener("mousemove", function(e) {
-          if (e.clientX < window.innerWidth / 2) {
+        addEventListener("mousemove", function(e) {
+          if (e.clientX < innerWidth / 2) {
             // カーソルが左半分にある / 左向きカーソル
             set_cursor("w-resize");
           }
@@ -72,7 +72,7 @@
 
       function set_move_page_events() {
         function set_scroll_page(scroll_top) {
-          window.scrollTo(0, scroll_top);
+          scrollTo(0, scroll_top);
         }
 
         function move_previous_page() {
@@ -89,7 +89,7 @@
           delete_image_margin_bottom();
 
           // 一番下にスクロール
-          set_scroll_page(window.document.body.clientHeight);
+          set_scroll_page(document.body.clientHeight);
 
           // スクロールが終わってから画像下のマージンをリセットする
           reset_image_margin_bottom();
@@ -104,8 +104,8 @@
           set_scroll_page(0);
         }
 
-        window.addEventListener("mousedown", function(e) {
-          if (e.clientX < window.innerWidth / 2) {
+        addEventListener("mousedown", function(e) {
+          if (e.clientX < innerWidth / 2) {
             // 左半分クリック
             move_previous_page();
           }
@@ -123,33 +123,33 @@
           Left:       move_previous_page, // result safari
         };
 
-        window.addEventListener("keydown", function(e) {
+        addEventListener("keydown", function(e) {
           // e.key           chrome, firefox
           // e.keyIdentifier safari
           var received_key  = e.key || e.keyIdentifier;
           var exec_function = RECEIVE_KEY_LIST_AND_EXEC_FUNCTIONS[received_key];
 
-          if(exec_function) {
+          if (exec_function) {
             exec_function();
           }
         }, false);
       }
 
       function set_onresize() {
-        window.addEventListener("resize", function(e) {
+        addEventListener("resize", function(e) {
           reset_image_margin_bottom();
         }, false);
       }
 
       function initialize() {
         // imgタグ作成
-        image = window.document.createElement("img");
+        image = document.createElement("img");
         image.style.width = "100%";
 
-        window.document.body.appendChild(image);
+        document.body.appendChild(image);
 
         // 画像と背景の境目が分かりやすいように背景色を設定する。とりあえず灰色
-        window.document.body.style.backgroundColor = "#dddddd";
+        document.body.style.backgroundColor = "#dddddd";
 
         zero_padding_string = new Array(zero_suppress_num).fill("0").join("");
 
@@ -166,7 +166,7 @@
       var image;
       var zero_padding_string;
 
-      window.addEventListener("DOMContentLoaded", initialize, false);
+      addEventListener("DOMContentLoaded", initialize, false);
     })();
   </script>
 </body>
