--- a/simple_image_viewer.html
+++ b/simple_image_viewer.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html>
 <head>
   <meta charset="UTF-8">
 </head>
@@ -171,4 +172,4 @@
     })();
   </script>
 </body>
-</heml>
+</html>
